--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,8 @@
 <html ng-app="myApp">
-<body>
-  <a social-facebook><strong>Share</strong> on facebook</a>
-  <a social-twitter><strong>Share</strong> on twitter</a>
+<body ng-init="coolWord='shizzlemnah'">
+  <a social-facebook><strong>Share</strong> on facebook</a><br>
+  <a social-twitter><strong>Share</strong> on twitter</a><br>
+  <a social-twitter status="This status is {{ coolWord }}"><strong>Share</strong> with custom status</a><br>
   <a social-googleplus><strong>Share</strong> on google plus</a>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
