--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
 	<a href="http://twitter.com" social-twitter><strong>Share</strong> on twitter</a><br>
 	<a href="http://twitter.com" social-twitter status="This status is {{ coolWord }}"><strong>Share</strong> with custom status</a><br>
 	<a href="http://plus.google.com" social-googleplus><strong>Share</strong> on google plus</a><br>
-	<a href="http://pinterest.com" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><strong>Share</strong> on google pinterest</a><br>
-	<a href="http://stumbleupon.com" social-stumbleupon><strong>Share</strong> on google stumbleupon</a><br>
-	<a href="http://linkedin.com" social-linkedin><strong>Share</strong> on google linkedin</a><br>
+	<a href="http://pinterest.com" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><strong>Share</strong> on pinterest</a><br>
+	<a href="http://stumbleupon.com" social-stumbleupon><strong>Share</strong> on stumbleupon</a><br>
+	<a href="http://linkedin.com" social-linkedin><strong>Share</strong> on linkedin</a><br>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
 	<script src="../angular-social-links.js" type="text/javascript"></script>
