improve google plus directive name

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 	<a href="http://facebook.com" social-facebook><strong>Share</strong> on facebook</a><br>
 	<a href="http://twitter.com" social-twitter><strong>Share</strong> on twitter</a><br>
 	<a href="http://twitter.com" social-twitter status="This status is {{ coolWord }}"><strong>Share</strong> with custom status</a><br>
-	<a href="http://plus.google.com" social-googleplus><strong>Share</strong> on google plus</a><br>
+	<a href="http://plus.google.com" social-gplus><strong>Share</strong> on google plus</a><br>
 	<a href="http://pinterest.com" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><strong>Share</strong> on pinterest</a><br>
 	<a href="http://stumbleupon.com" social-stumbleupon><strong>Share</strong> on stumbleupon</a><br>
 	<a href="http://linkedin.com" social-linkedin><strong>Share</strong> on linkedin</a><br>
