--- a/demo/index.html
+++ b/demo/index.html
@@ -24,13 +24,13 @@
 				<h1>Angular Social Links</h1>
 
 				<h2>
-					<a class="fa fa-facebook-square" href="/" social-facebook><span class="hide">Share on facebook</span></a>
-					<a class="fa fa-twitter-square" href="/" social-twitter><span class="hide">Share on twitter</span></a>
-					<a class="fa fa-twitter-square" href="/" social-twitter status="This status is {{ coolWord }}"><span class="hide">Share with custom status</span></a>
-					<a class="fa fa-google-plus-square" href="/" social-gplus><span class="hide">Share on google plus</span></a>
-					<a class="fa fa-pinterest-square" href="/" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><span class="hide">Share on pinterest</span></a>
-					<a class="fa fa-stumbleupon" href="/" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
-					<a class="fa fa-linkedin-square" href="/" social-linkedin><span class="hide">Share on linkedin</span></a>
+					<a class="fa fa-facebook-square" href="" social-facebook><span class="hide">Share on facebook</span></a>
+					<a class="fa fa-twitter-square" href="" social-twitter><span class="hide">Share on twitter</span></a>
+					<a class="fa fa-twitter-square" href="" social-twitter status="This status is {{ coolWord }}"><span class="hide">Share with custom status</span></a>
+					<a class="fa fa-google-plus-square" href="" social-gplus><span class="hide">Share on google plus</span></a>
+					<a class="fa fa-pinterest-square" href="" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><span class="hide">Share on pinterest</span></a>
+					<a class="fa fa-stumbleupon" href="" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
+					<a class="fa fa-linkedin-square" href="" social-linkedin><span class="hide">Share on linkedin</span></a>
 				</h2>
 
 			</div>
@@ -43,7 +43,7 @@
 		</p>
 	</footer>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
 	<script src="../angular-social-links.js" type="text/javascript"></script>
 	<script>
 		angular.module('myApp', ['socialLinks']);
