--- a/demo/index.html
+++ b/demo/index.html
@@ -23,15 +23,30 @@
 			<div class="column">
 				<h1>Angular Social Links</h1>
 
-				<h2>
-					<a class="fa fa-facebook-square" href="" social-facebook><span class="hide">Share on facebook</span></a>
-					<a class="fa fa-twitter-square" href="" social-twitter><span class="hide">Share on twitter</span></a>
-					<a class="fa fa-twitter-square" href="" social-twitter status="This status is {{ coolWord }}"><span class="hide">Share with custom status</span></a>
-					<a class="fa fa-google-plus-square" href="" social-gplus><span class="hide">Share on google plus</span></a>
-					<a class="fa fa-pinterest-square" href="" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><span class="hide">Share on pinterest</span></a>
-					<a class="fa fa-stumbleupon" href="" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
-					<a class="fa fa-linkedin-square" href="" social-linkedin><span class="hide">Share on linkedin</span></a>
-				</h2>
+				<div class="panel">
+					<h2>
+						<a class="fa fa-facebook-square" href="" social-facebook><span class="hide">Share on facebook</span></a>
+						<a class="fa fa-twitter-square" href="" social-twitter><span class="hide">Share on twitter</span></a>
+						<a class="fa fa-twitter-square" href="" social-twitter status="This status is {{ coolWord }}"><span class="hide">Share with custom status</span></a>
+						<a class="fa fa-google-plus-square" href="" social-gplus><span class="hide">Share on google plus</span></a>
+						<a class="fa fa-pinterest-square" href="" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><span class="hide">Share on pinterest</span></a>
+						<a class="fa fa-stumbleupon" href="" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
+						<a class="fa fa-linkedin-square" href="" social-linkedin><span class="hide">Share on linkedin</span></a>
+					</h2>
+				</div>
+
+				<h2>With Custom Urls</h2>
+				<div class="panel">
+				  <h2>
+				  	<a class="fa fa-facebook-square" href="" custom-url="http://google.com" social-facebook><span class="hide">Share on facebook</span></a>
+				  	<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter><span class="hide">Share on twitter</span></a>
+				  	<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter status="This status is {{ coolWord }}"><span class="hide">Share with custom status</span></a>
+				  	<a class="fa fa-google-plus-square" href="" custom-url="http://google.com" social-gplus><span class="hide">Share on google plus</span></a>
+				  	<a class="fa fa-pinterest-square" href="" custom-url="http://google.com" social-pinterest media="http://lorempixel.com/100/100" description="An awesome description"><span class="hide">Share on pinterest</span></a>
+				  	<a class="fa fa-stumbleupon" href="" custom-url="http://google.com" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
+				  	<a class="fa fa-linkedin-square" href="" custom-url="http://google.com" social-linkedin><span class="hide">Share on linkedin</span></a>
+				  </h2>
+				</div>
 
 			</div>
 		</div>
