make demo responsive

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,8 @@
 	<title>Angular Social Links</title>
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.3/css/foundation.css">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<style>
 		body {
 			display: flex;
