add reddit to demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -34,6 +34,7 @@
 						<a class="fa fa-pinterest-square" href="" social-pinterest media="http://lorempixel.com/100/100/nature/1" description="An awesome description"><span class="hide">Share on pinterest</span></a>
 						<a class="fa fa-stumbleupon" href="" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
 						<a class="fa fa-linkedin-square" href="" social-linkedin><span class="hide">Share on linkedin</span></a>
+						<a class="fa fa-reddit-square" href="" social-reddit><span class="hide">Share on reddit</span></a>
 					</h2>
 				</div>
 
@@ -47,6 +48,7 @@
 						<a class="fa fa-pinterest-square" href="" custom-url="http://google.com" social-pinterest media="http://lorempixel.com/100/100/nature/1" description="An awesome description"><span class="hide">Share on pinterest</span></a>
 						<a class="fa fa-stumbleupon" href="" custom-url="http://google.com" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
 						<a class="fa fa-linkedin-square" href="" custom-url="http://google.com" social-linkedin><span class="hide">Share on linkedin</span></a>
+						<a class="fa fa-reddit-square" href="" custom-url="http://google.com" social-reddit><span class="hide">Share on reddit</span></a>
 				  </h2>
 				</div>
 
