--- a/demo/index.html
+++ b/demo/index.html
@@ -18,9 +18,9 @@
 		}
 	</style>
 </head>
-<body class="text-center" ng-init="coolWord='shizzlemnah'">
+<body class="text-center">
 
-	<div class="main">
+	<div class="main" ng-controller="DemoCtrl as demo">
 		<div class="row">
 			<div class="column">
 				<h1>Angular Social Links</h1>
@@ -29,7 +29,7 @@
 					<h2>
 						<a class="fa fa-facebook-square" href="" social-facebook><span class="hide">Share on facebook</span></a>
 						<a class="fa fa-twitter-square" href="" social-twitter><span class="hide">Share on twitter</span></a>
-						<a class="fa fa-twitter-square" href="" social-twitter status="This status is {{ coolWord }}"><span class="hide">Share with custom status</span></a>
+						<a class="fa fa-twitter-square" href="" social-twitter status="This status is {{ demo.coolWord }}"><span class="hide">Share with custom status</span></a>
 						<a class="fa fa-google-plus-square" href="" social-gplus><span class="hide">Share on google plus</span></a>
 						<a class="fa fa-pinterest-square" href="" social-pinterest media="http://lorempixel.com/100/100/nature/1" description="An awesome description"><span class="hide">Share on pinterest</span></a>
 						<a class="fa fa-stumbleupon" href="" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
@@ -43,9 +43,9 @@
 				  <h2>
 						<a class="fa fa-facebook-square" href="" custom-url="http://google.com" social-facebook><span class="hide">Share on facebook</span></a>
 						<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter><span class="hide">Share on twitter</span></a>
-						<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter status="This status is {{ coolWord }}"><span class="hide">Share with custom status</span></a>
+						<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter status="This status is {{ demo.coolWord }}"><span class="hide">Share with custom status</span></a>
 						<a class="fa fa-google-plus-square" href="" custom-url="http://google.com" social-gplus><span class="hide">Share on google plus</span></a>
-						<a class="fa fa-pinterest-square" href="" custom-url="http://google.com" social-pinterest media="http://lorempixel.com/100/100/nature/1" description="An awesome description"><span class="hide">Share on pinterest</span></a>
+						<a class="fa fa-pinterest-square" href="" custom-url="http://google.com" social-pinterest media="{{ pinterestMediaUrl }}" description="An awesome description"><span class="hide">Share on pinterest</span></a>
 						<a class="fa fa-stumbleupon" href="" custom-url="http://google.com" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
 						<a class="fa fa-linkedin-square" href="" custom-url="http://google.com" social-linkedin><span class="hide">Share on linkedin</span></a>
 						<a class="fa fa-reddit-square" href="" custom-url="http://google.com" social-reddit><span class="hide">Share on reddit</span></a>
@@ -65,6 +65,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
 	<script src="../angular-social-links.js" type="text/javascript"></script>
 	<script>
-		angular.module('myApp', ['socialLinks']);
+		angular.module('myApp', ['socialLinks'])
+			.controller('DemoCtrl', function() {
+				this.coolWord = 'shizzlemnah';
+				this.pinterestMediaUrl = 'http://lorempixel.com/100/100/nature/1';
+			})
 	</script>
 </body>
