add vk.com as share option

--- a/demo/index.html
+++ b/demo/index.html
@@ -35,6 +35,7 @@
 						<a class="fa fa-stumbleupon" href="" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
 						<a class="fa fa-linkedin-square" href="" social-linkedin><span class="hide">Share on linkedin</span></a>
 						<a class="fa fa-reddit-square" href="" social-reddit><span class="hide">Share on reddit</span></a>
+						<a class="fa fa-vk" href="" social-vk><span class="hide">Share on vk.com</span></a>
 					</h2>
 				</div>
 
@@ -49,6 +50,7 @@
 						<a class="fa fa-stumbleupon" href="" custom-url="http://google.com" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
 						<a class="fa fa-linkedin-square" href="" custom-url="http://google.com" social-linkedin><span class="hide">Share on linkedin</span></a>
 						<a class="fa fa-reddit-square" href="" custom-url="http://google.com" social-reddit><span class="hide">Share on reddit</span></a>
+						<a class="fa fa-vk" href="" custom-url="http://google.com" social-vk><span class="hide">Share on vk.com</span></a>
 				  </h2>
 				</div>
 
