--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
 					<h2>
 						<a class="fa fa-facebook-square" href="" social-facebook><span class="hide">Share on facebook</span></a>
 						<a class="fa fa-twitter-square" href="" social-twitter><span class="hide">Share on twitter</span></a>
-						<a class="fa fa-twitter-square" href="" social-twitter status="This status is {{ demo.coolWord }}"><span class="hide">Share with custom status</span></a>
+						<a class="fa fa-twitter-square" href="" social-twitter status="This status is #{{ demo.coolWord }}"><span class="hide">Share with custom status</span></a>
 						<a class="fa fa-google-plus-square" href="" social-gplus><span class="hide">Share on google plus</span></a>
 						<a class="fa fa-pinterest-square" href="" social-pinterest media="{{ demo.pinterestMediaUrl }}" description="An awesome description"><span class="hide">Share on pinterest</span></a>
 						<a class="fa fa-stumbleupon" href="" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
@@ -44,7 +44,7 @@
 				  <h2>
 						<a class="fa fa-facebook-square" href="" custom-url="http://google.com" social-facebook><span class="hide">Share on facebook</span></a>
 						<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter><span class="hide">Share on twitter</span></a>
-						<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter status="This status is {{ demo.coolWord }}"><span class="hide">Share with custom status</span></a>
+						<a class="fa fa-twitter-square" href="" custom-url="http://google.com" social-twitter status="This status is #{{ demo.coolWord }}"><span class="hide">Share with custom status</span></a>
 						<a class="fa fa-google-plus-square" href="" custom-url="http://google.com" social-gplus><span class="hide">Share on google plus</span></a>
 						<a class="fa fa-pinterest-square" href="" custom-url="http://google.com" social-pinterest media="{{ pinterestMediaUrl }}" description="An awesome description"><span class="hide">Share on pinterest</span></a>
 						<a class="fa fa-stumbleupon" href="" custom-url="http://google.com" social-stumbleupon><span class="hide">Share on stumbleupon</span></a>
