Custom handler test

--- a/demo/index.html
+++ b/demo/index.html
@@ -54,6 +54,15 @@
 				  </h2>
 				</div>
 
+
+				<h2>With Custom Handlers</h2>
+				<div class="panel">
+				  <h2>
+						<a class="fa fa-facebook-square" title="This il show an alert." href="" social-facebook custom-handler="$event.preventDefault();demo.alert('Url is:' + $url)"><span class="hide">Share on facebook</span></a>
+						<a class="fa fa-twitter-square" title="This will navigate in this window" href="" social-twitter custom-handler="true"><span class="hide">Share on twitter</span></a>
+				  </h2>
+				</div>
+
 			</div>
 		</div>
 	</div>
@@ -69,11 +78,14 @@
 	<script>
 		angular.module('myApp', ['socialLinks'])
 			.controller('DemoCtrl', function($timeout) {
-				self = this;
-				self.coolWord = 'shizzlemnah';
+				me = this;
+				me.coolWord = 'shizzlemnah';
+				me.alert = function(message) {
+					window.alert(message);
+				};
 				$timeout(function() {
-					self.pinterestMediaUrl = 'http://lorempixel.com/100/100/nature/1';
-				}, 1000)
+					me.pinterestMediaUrl = 'http://lorempixel.com/100/100/nature/1';
+				}, 1000);
 			})
 	</script>
 </body>
