--- a/demo/index.html
+++ b/demo/index.html
@@ -69,7 +69,7 @@
 
 	<footer class="row">
 		<p class="column">
-			A little something from the folks over at <a href="http://fixate.it">Fixate Web and Design</a> | <a href="http://github.com/fixate/angular-social-links">Github repo</a>
+			A little something from the folks over at <a href="http://fixate.it">Fixate Web and Design</a> | <a href="https://github.com/fixate/angular-social-links">Github repo</a>
 		</p>
 	</footer>
 
