add xing as share option

--- a/demo/index.html
+++ b/demo/index.html
@@ -36,6 +36,7 @@
 						<a class="fa fa-linkedin-square" href="" social-linkedin><span class="hide">Share on linkedin</span></a>
 						<a class="fa fa-reddit-square" href="" social-reddit><span class="hide">Share on reddit</span></a>
 						<a class="fa fa-vk" href="" social-vk><span class="hide">Share on vk.com</span></a>
+						<a class="fa fa-xing" href="" social-xing><span class="hide">Share on xing</span></a>
 					</h2>
 				</div>
 
@@ -51,6 +52,7 @@
 						<a class="fa fa-linkedin-square" href="" custom-url="http://google.com" social-linkedin><span class="hide">Share on linkedin</span></a>
 						<a class="fa fa-reddit-square" href="" custom-url="http://google.com" social-reddit><span class="hide">Share on reddit</span></a>
 						<a class="fa fa-vk" href="" custom-url="http://google.com" social-vk><span class="hide">Share on vk.com</span></a>
+						<a class="fa fa-xing" href="" custom-url="http://google.com" social-xing><span class="hide">Share on xing</span></a>
 				  </h2>
 				</div>
 
